update PodState to use AtomicReference and CAS mechanism for lock free synchronization